Fixed issue with spacing

--- a/src/components/pages/Index/Schedule.module.css
+++ b/src/components/pages/Index/Schedule.module.css
@@ -1,7 +1,8 @@
 .Wrapper {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    margin-top: 25%;
+    padding: .5rem 1.5rem;
     overflow: hidden;
 }
 
@@ -58,6 +59,9 @@
 }
 
 @media screen and (min-width: 1000px) {
+    .Wrapper {
+        margin-top: initial;
+    }
     .ScheduleBodyWrapperWrapper {
         justify-content: center;
         flex-direction: row;
